tests/chainsaw/disallow-capabilities/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod
  labels:
    foo: bad
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
    securityContext:
      capabilities:
        add:
        - NET_ADMIN
